<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:defaultValue="@string/pref_client_name_default_value"
        android:title="@string/pref_client_name_title"
        android:key="@string/pref_client_name_key"
        app:iconSpaceReserved="false"
        />
    <EditTextPreference
        android:title="@string/pref_client_pass_title"
        android:key="@string/pref_client_pass_key"
        app:iconSpaceReserved="false"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_client_email_default_value"
        android:title="@string/pref_client_email_title"
        android:key="@string/pref_client_email_key"
        app:iconSpaceReserved="false"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_random_ip_default_value"
        android:title="@string/pref_random_ip_title"
        android:key="@string/pref_random_ip_key"
        app:iconSpaceReserved="false"
        />
    <EditTextPreference
        android:defaultValue="@string/pref_random_port_default_value"
        android:title="@string/pref_random_port_title"
        android:key="@string/pref_random_port_key"
        app:iconSpaceReserved="false"
        />

</PreferenceScreen>