<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/folder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground">

        <ImageView
            android:id="@+id/folder_image"
            android:background="@drawable/round_folder_black_48"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/folder_image"
            android:orientation="vertical"
            android:paddingStart="8dp"
            android:layout_centerVertical="true"
            tools:ignore="RtlSymmetry">
            <TextView
                android:id="@+id/folder_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_folder"
                android:textSize="16sp"
                />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/songs"
                    android:id="@+id/files_in_folder_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="8dp"/>
                <TextView
                    android:text="@string/default_files_in_folder"
                    android:id="@+id/files_in_folder_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/download_songs"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/folder"
        android:paddingStart="28dp"
        android:visibility="invisible"
        tools:ignore="RtlSymmetry">
    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>